Fix board alignment, beginnings of move suggest

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -5,7 +5,25 @@
 /* This file is for your main application CSS */
 
 .dark { fill: #555; }
-.light { fill: #f6f6f6; }
+.light { fill: #ddd; }
+
+:root {
+	--white-active: #FCD34D;
+	--black-active: #92400E;
+}
 
 g.white circle { fill: #fff; stroke: #111; }
+	[data-active-player="white"][data-turn="white"] g.white circle.active { fill: var(--white-active); }
+	[data-active-player="white"][data-turn="white"] g.white circle.final:hover { fill: var(--white-active); }
 g.black circle { fill: #111; stroke: #999; }
+	[data-active-player="black"][data-turn="black"] g.black circle.active { fill: var(--black-active); }
+	[data-active-player="black"][data-turn="black"] g.black circle.final:hover { fill: var(--black-active); }
+
+[data-active-player="white"][data-turn="white"] g.white .final,
+[data-active-player="black"][data-turn="black"] g.black .final { cursor: pointer; }
+
+.dice-value {
+	font-size: 36px;
+	font-weight: bold;
+	text-align: center;
+}
